
bin_PROGRAMS = evenja

# evenja objects

evenja_SOURCES = globalvars.cpp fclassinfos.cpp fviewer.cpp fstringhash.cpp fstarter.cpp frouter.cpp fposition.cpp fportlisthash.cpp fport.cpp flisthash.cpp flist.cpp flisttree.cpp fevenprg.cpp fconditionlink.cpp fevendoor.cpp fevendata.cpp fevenboard.cpp fconfig.cpp fportbkpevendata.cpp main.cpp 

evenja_LDADD = -lxml2

EXTRA_DIST = main.cpp fclassinfos.cpp fclassinfos.h fconfig.cpp fconfig.h fevenboard.cpp fevenboard.h fevendata.cpp fevendata.h fconditionlink.cpp fconditionlink.h fevendoor.cpp fevendoor.h fevenprg.cpp fevenprg.h flist.cpp flisttree.h flisttree.cpp flist.h flisthash.cpp flisthash.h fport.cpp fport.h fportlisthash.cpp fportlisthash.h fposition.cpp fposition.h fclassinfos.h flinkinfos.h frouter.cpp frouter.h fstarter.cpp fstarter.h fstringhash.cpp fstringhash.h fviewer.cpp fviewer.h OSconfig.h OSlinux.h returncodes.h testezlog.xml evenjastrings.h fportbkpevendata.cpp fportbkpevendata.h globalvars.cpp globalvars.h

execbindir = ../$(prefix)/bin
execbin_PROGRAMS = evenja

configsdir = ../$(prefix)/configs
configs_DATA = configs/ezlog.xml

